# agent_options_trading

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.console  README.md  alembic.ini  config.toml  docker-compose.yml  pyproject.toml  universe.txt
.claude/commands/: trello-wp-evaluate.md  trello-wp-plan.md  trello-wp-review.md  trello-wp-start.md  trello-wp-status.md  trello-wp.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_fill_events.py  003_position_assignment_fields.py  004_iv_history.py  004_kill_switch_log.py  005_exit_reason.py  006_alert_delivery_failures.py  007_iv_history.py  008_journal_data_quality_flags.py  009_fix_double_json_encoded_columns.py
docs/: CONTRACT_CHANGE_POLICY.md  WORKSTREAMS.md  options-agent-plan.md  runbook-first-paper-fill.md  runbook_kill_switch.md
docs/features/: agent-tools.md  broker-execution.md  data-signals.md  kill-switch.md  monitor.md  observability.md  ops-console.md  orchestrator.md  risk-guardrails.md  state-persistence.md  vertical-slice.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: mock-api.mjs  smoke.spec.ts
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  format.test.ts  format.ts  index.css
options_agent/: __main__.py  config.py  orchestrator.py  scheduler.py
options_agent/agent/: ask.py  ask_prompts.py  ask_schema.py  ask_tool.py  eval_scenarios.py  prompts.py  reasoner.py  schema.py  sql_guard.py  stub_reasoner.py  tools.py  tools_mock.py
options_agent/context/: assembler.py  portfolio.py
options_agent/contracts/: __init__.py  alerts.py  data.py  journal.py  orchestrator.py  proposal.py  results.py  state.py
options_agent/data/: chains.py  events.py  greeks_iv.py  iv_rank.py  macro_calendar.py  market.py  price_history.py  tools.py
options_agent/execution/: broker.py  orders.py  reconcile.py
options_agent/monitor/: exits.py
options_agent/obs/: __main__.py  alerts.py  data_quality.py  killswitch.py  review.py
options_agent/risk/: gates.py  limits.py  sizing.py  structure.py  validator.py
options_agent/state/: crud.py  db.py  journal.py
options_agent/tests/: conftest.py  test_alerts.py  test_alpaca_provider.py  test_ask.py  test_backend_dialect.py  test_broker.py  test_broker_smoke.py  test_chains.py  test_config.py  test_context.py  test_crud.py  test_daily_iv_job.py  test_data.py  test_entry_cycle_real_data.py  test_eval_harness.py  test_events.py  test_exit_reprice.py  test_exits.py  test_gates.py  test_greeks_iv.py  (+39 more)
scripts/: backfill_iv_history.py  backfill_iv_rank_at_open.py  backfill_position_fill_metrics.py  seed_console_demo_data.py  verify_iv_rank_sanity.py
(+62 files in other folders)
