[project]
name = "options-agent"
version = "0.1.0"
description = "AI-driven options trading agent (paper only)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "alpaca-py>=0.43.4",
    "anthropic>=0.107.0",
    "exchange-calendars>=4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.9",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["options_agent"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["options_agent/tests"]
markers = [
    "integration: live-network tests; skipped when ALPACA_API_KEY is absent",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
