[project]
name = "options-agent"
version = "0.1.0"
description = "AI-driven options trading agent (paper only)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "alpaca-py>=0.43.4",
    "anthropic>=0.107.0",
    "exchange-calendars>=4.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    # psycopg2-binary is the Postgres driver for synchronous SQLAlchemy Core.
    # -binary ships its own libpq and is fine for this single-user paper-trading
    # experiment; a future production-hardening step would switch to non-binary
    # psycopg2 built against the system libpq, or migrate to psycopg v3.
    "psycopg2-binary>=2.9",
    "yfinance>=0.2",
    # yfinance uses lxml to scrape the earnings-dates page; without it,
    # get_earnings_dates() raises "Import lxml failed" and the agent marks
    # earnings data unavailable (data_available=False) for equities.
    "lxml>=5.0",
    "rich>=13.0",
    "apscheduler>=3.10,<4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.9",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["options_agent"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["options_agent/tests"]
markers = [
    "integration: live-network tests; skipped when ALPACA_API_KEY is absent",
    "smoke: end-to-end smoke tests requiring market open and live paper credentials; run on-demand",
    "eval: prompt eval tests that call the real Anthropic API; run explicitly with: pytest tests/evals/ -m eval",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
